Community Produced Data is now correctly displayed in the GUI