@@ -3,7 +3,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                              http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>com.example</groupId>
+  <groupId>at.fhtw.disys</groupId>
   <artifactId>javafx-gui</artifactId>
   <version>0.0.1-SNAPSHOT</version>
 
@@ -52,29 +52,39 @@
       <artifactId>jackson-databind</artifactId>
       <version>2.15.2</version>
     </dependency>
+      <dependency>
+          <groupId>com.fasterxml.jackson.datatype</groupId>
+          <artifactId>jackson-datatype-jsr310</artifactId>
+          <version>2.19.1</version>
+          <scope>compile</scope>
+      </dependency>
+    <dependency>
+      <groupId>technikum</groupId>
+      <artifactId>RestAPI</artifactId>
+      <version>0.0.1-SNAPSHOT</version>
+      <scope>compile</scope>
+    </dependency>
   </dependencies>
 
   <build>
     <plugins>
       <!-- Maven Compiler Plugin für Java 17+ und Modulsystem -->
       <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.8.1</version>
-        <configuration>
-          <release>${java.version}</release>
-          <source>9</source>
-          <target>9</target>
-        </configuration>
-      </plugin>
-
-      <!-- JavaFX Maven Plugin -->
-      <plugin>
         <groupId>org.openjfx</groupId>
         <artifactId>javafx-maven-plugin</artifactId>
         <version>0.0.8</version>
         <configuration>
-          <mainClass>com.example.gui.MainApp</mainClass>
+          <mainClass>at.fhtw.disys.MainApp</mainClass>
+          <options>
+            <option>--add-modules</option>
+            <option>javafx.controls,javafx.fxml</option>
+          </options>
+        </configuration>
+      </plugin>
+      <plugin>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <release>17</release>
         </configuration>
       </plugin>
     </plugins>
